<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.details.Skills">

    <TextView
        style="@style/headingStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skills" />


    <EditText
        android:id="@+id/etSkills1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8"
        style="@style/edit_input"
        android:hint="@string/skill1" />

    <EditText
        android:id="@+id/etSkills2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginStart="@dimen/dimen_8"
        style="@style/edit_input"
        android:hint="@string/skill2" />
    <EditText
        android:id="@+id/etSkill3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginStart="@dimen/dimen_8"
        style="@style/edit_input"
        android:hint="@string/skill3" />
    <EditText
    android:id="@+id/etSkill4"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone"
    android:layout_marginStart="@dimen/dimen_8"
    style="@style/edit_input"
    android:hint="@string/skill4" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginHorizontal="@dimen/dimen_16"

        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:layout_marginHorizontal="@dimen/dimen_16"
            android:id="@+id/addSkills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_more"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="@color/secondaryTextColor"
            android:background="@drawable/btn_style"/>
        <Button
            android:layout_marginHorizontal="@dimen/dimen_16"
            android:id="@+id/SaveAllSkils"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="@color/secondaryTextColor"
            android:background="@drawable/btn_style"/>
    </LinearLayout>


</LinearLayout>