<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.details.Intrest">

    <TextView
        style="@style/headingStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intrests" />


    <EditText
        android:id="@+id/etIntrest1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8"
        style="@style/EditTextBox"
        android:hint="@string/intrest1" />

    <EditText
        android:id="@+id/etIntrest2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginStart="@dimen/dimen_8"
        style="@style/EditTextBox"
        android:hint="@string/intrest2" />
    <EditText
        android:id="@+id/etIntrest3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginStart="@dimen/dimen_8"
        style="@style/EditTextBox"
        android:hint="@string/intrest3" />
    <EditText
        android:id="@+id/etIntrest4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginStart="@dimen/dimen_8"
        style="@style/EditTextBox"
        android:hint="@string/intrest4" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:layout_marginHorizontal="@dimen/dimen_16"
            android:id="@+id/addIntrest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_more"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="@color/secondaryTextColor"
            android:background="@drawable/btn_style"/>
        <Button
            android:layout_marginHorizontal="@dimen/dimen_16"
            android:id="@+id/SaveAllIntrests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="@color/secondaryTextColor"
            android:background="@drawable/btn_style"/>
    </LinearLayout>


</LinearLayout>