<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp"
        tools:context=".screens.details.Experience">

        <TextView
            style="@style/headingStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/experienc" />

        <EditText
            android:id="@+id/etCompanyName"
            style="@style/EditTextBox"
            android:layout_width="match_parent"
            android:hint="@string/company_name"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditTextBox"
            android:hint="@string/job_title"
         />

        <EditText
            android:id="@+id/etPassingYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditTextBox"
            android:hint="@string/start_date"
            android:inputType="date"
           />

        <EditText
            style="@style/EditTextBox"
            android:hint="@string/end_date"
            android:id="@+id/etEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/etJobDescription"
            style="@style/EditTextBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_150"
            android:gravity="start"
            android:layout_marginStart="@dimen/dimen_8"
            android:hint="@string/shortdescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:layout_marginHorizontal="@dimen/dimen_16"
            android:id="@+id/chooseObjective"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_more"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="@color/secondaryTextColor"
            android:background="@drawable/btn_style"/>
        <Button
            android:layout_marginHorizontal="@dimen/dimen_16"
            android:id="@+id/saveExperience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="@color/secondaryTextColor"
            android:background="@drawable/btn_style"/>
    </LinearLayout>
    </LinearLayout>
</layout>