<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dimen_64"
        android:paddingTop="10dp"
        tools:context=".screens.details.Eduction">



        <EditText
            android:id="@+id/etSchoolName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8"
            android:layout_marginLeft="@dimen/dimen_8"
            android:ems="10"
            android:hint="@string/school_name"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/dimen_8" />

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8"
            android:layout_marginLeft="@dimen/dimen_8"
            android:ems="10"
            android:hint="Enter Title "
            android:inputType="textPersonName"
            android:paddingStart="@dimen/dimen_8" />

        <EditText
            android:id="@+id/etPassingYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8"
            android:layout_marginLeft="@dimen/dimen_8"
            android:ems="10"
            android:hint="@string/passing_year"
            android:inputType="date"
            android:paddingStart="@dimen/dimen_8" />

        <EditText
            android:id="@+id/etGrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8"
            android:layout_marginLeft="@dimen/dimen_8"
            android:ems="10"
            android:hint="@string/enter_grade"
            android:inputType="number"
            android:paddingStart="@dimen/dimen_8" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginHorizontal="@dimen/dimen_16"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:id="@+id/addEducation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_more"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textColor="@color/secondaryTextColor"
                android:background="@drawable/btn_style"/>
            <Button
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:id="@+id/saveEducations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textColor="@color/secondaryTextColor"
                android:background="@drawable/btn_style"/>
        </LinearLayout>

    </LinearLayout>
</layout>