<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginTop="@dimen/dimen_64"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.details.Objective">




    <EditText
        android:id="@+id/etObjective"
        style="@style/edit_input"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_150"
        android:gravity="start"
        android:layout_marginStart="@dimen/dimen_8"
        android:hint="@string/objective_box" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:layout_marginHorizontal="@dimen/dimen_16"
            android:id="@+id/chooseObjective"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chooseObjective"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="@color/secondaryTextColor"
            android:background="@drawable/btn_style"/>
        <Button
            android:layout_marginHorizontal="@dimen/dimen_16"
            android:id="@+id/saveObjective"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="@color/secondaryTextColor"
            android:background="@drawable/btn_style"/>
    </LinearLayout>


</LinearLayout>