<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".screens.details.Projects">




    <LinearLayout
        android:layout_marginTop="@dimen/dimen_64"
        android:id="@+id/Project1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/etTitle1"
            style="@style/edit_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/dimen_8"
            android:hint="@string/title" />

        <EditText
            android:id="@+id/etDescription1"
            style="@style/edit_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/dimen_8"
            android:hint="@string/description" />
    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/project2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/etTitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8"
            style="@style/edit_input"
            android:hint="@string/title" />
        <EditText
            android:id="@+id/etDescription2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8"
            style="@style/edit_input"
            android:hint="@string/description" />
    </LinearLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="2"
    android:layout_marginHorizontal="@dimen/dimen_16"
    android:orientation="horizontal">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addIntrest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:layout_weight="1"
        android:background="@drawable/btn_style"
        android:text="@string/add_more"
        android:textColor="@color/secondaryTextColor"
        android:textStyle="bold" />
    <Button
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:id="@+id/SaveAllIntrests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textStyle="bold"
        android:layout_weight="1"
        android:textColor="@color/secondaryTextColor"
        android:background="@drawable/btn_style"/>
</LinearLayout>


</LinearLayout>